@@ -15,6 +15,8 @@ cdebconf (0.80) UNRELEASED; urgency=low
       difference for questions created using REGISTER). This is only used by
       debconf-copydb and debconf-dumpdb right now, and the global template
       database is retained as a fallback.
+    - Add template instance for the debconf database in /target to the
+      distributed cdebconf.conf, and associate it with target_configdb.
 
  -- Colin Watson <cjwatson@debian.org>  Wed, 15 Jun 2005 16:16:34 +0100
 
